# hexlet_pytest

./: .gitignore  pyproject.toml
src/hexlet_pytest/: stack.py
tests/: test_example.py  test_stack.py
